--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -25,18 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "import numpy as np\n",
+    "import sys"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T11:48:27.582871Z",
-     "start_time": "2023-07-03T11:48:27.579501Z"
+     "end_time": "2024-11-06T17:41:14.707319Z",
+     "start_time": "2024-11-06T17:41:14.616584Z"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -56,33 +57,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
    "source": [
-    "# write your code here (for Python default syntax)"
+    "list_of_numbers = [0] * 1000\n",
+    "print(sys.getsizeof(list_of_numbers))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T12:02:41.673421Z",
-     "start_time": "2023-07-03T12:02:41.666277Z"
+     "end_time": "2024-11-06T17:43:39.446622Z",
+     "start_time": "2024-11-06T17:43:39.442267Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8056\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
    "source": [
-    "# write your code here (for numpy syntax)"
+    "list_of_numbers = np.zeros(1000, dtype=np.int8)\n",
+    "print(sys.getsizeof(list_of_numbers))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T12:02:40.402169Z",
-     "start_time": "2023-07-03T12:02:40.397753Z"
+     "end_time": "2024-11-06T17:46:05.121517Z",
+     "start_time": "2024-11-06T17:46:05.117843Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1112\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -100,18 +119,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
    "source": [
-    "# write your code here"
+    "length = np.random.randint(5, 10)\n",
+    "numpy_array = np.random.uniform(0, 10, size=length)\n",
+    "first_element = numpy_array[0]\n",
+    "second_element = numpy_array[2]\n",
+    "third_element = numpy_array[-1]\n",
+    "print(numpy_array, first_element, second_element, third_element)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T12:09:59.129304Z",
-     "start_time": "2023-07-03T12:09:59.123472Z"
+     "end_time": "2024-11-06T17:51:12.956742Z",
+     "start_time": "2024-11-06T17:51:12.952121Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.06276552 7.07959838 9.26809235 6.34121959 1.82246408 4.6152827\n",
+      " 8.42915345] 5.06276552086968 9.268092351023576 8.429153448023014\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -126,19 +159,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
    "source": [
     "array = np.array([2.3, 7.8, 3.2, 1.1, 5.8, 9.5, 17.6, 11.1])\n",
-    "# write your code here"
+    "print(np.sum(array[[0, 1, 4, -1]]))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T12:29:03.323607Z",
-     "start_time": "2023-07-03T12:29:03.315987Z"
+     "end_time": "2024-11-06T17:58:28.556365Z",
+     "start_time": "2024-11-06T17:58:28.551857Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.0\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -165,8 +206,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "A = np.array([\n",
     "    [1, 6],\n",
@@ -178,8 +217,14 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "is_executing": true,
+    "ExecuteTime": {
+     "end_time": "2024-11-06T18:01:43.632237Z",
+     "start_time": "2024-11-06T18:01:43.628719Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -192,18 +237,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [
-    "# write your code here"
-   ],
+   "source": "print(np.mean(A, axis=0))",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:19:27.412040Z",
-     "start_time": "2023-07-03T13:19:27.406096Z"
+     "end_time": "2024-11-06T18:02:04.348132Z",
+     "start_time": "2024-11-06T18:02:04.343668Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.  8.4]\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -216,15 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# write your code here"
-   ],
+   "source": "print(np.std(A, axis=1))",
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "is_executing": true,
+    "ExecuteTime": {
+     "end_time": "2024-11-06T18:03:06.017933Z",
+     "start_time": "2024-11-06T18:03:06.014026Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5 3.  4.  3.5 3. ]\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -237,18 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "# write your code here"
-   ],
+   "source": "print(np.sum(A, axis=1))",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:20:47.632326Z",
-     "start_time": "2023-07-03T13:20:47.621552Z"
+     "end_time": "2024-11-06T18:04:29.450752Z",
+     "start_time": "2024-11-06T18:04:29.447259Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 7 10 14 13  8]\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -268,18 +335,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
-   "source": [
-    "# write your code here"
-   ],
+   "source": "print(A[:2])",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:20:25.817726Z",
-     "start_time": "2023-07-03T13:20:25.801386Z"
+     "end_time": "2024-11-06T18:05:48.419289Z",
+     "start_time": "2024-11-06T18:05:48.415659Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 6]\n",
+      " [2 8]]\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -299,18 +373,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "# write your code here"
-   ],
+   "source": "print(A[[0, 2, 4]])",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:10:40.819149Z",
-     "start_time": "2023-07-03T13:10:40.802290Z"
+     "end_time": "2024-11-06T18:07:20.686391Z",
+     "start_time": "2024-11-06T18:07:20.679724Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  6]\n",
+      " [ 3 11]\n",
+      " [ 1  7]]\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -361,18 +443,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
-    "# write your numpy code here and estimate the time of execution"
-   ],
+   "source": "print(np.arange(1000000))",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:17:21.595244Z",
-     "start_time": "2023-07-03T13:17:21.585713Z"
+     "end_time": "2024-11-06T18:08:46.400251Z",
+     "start_time": "2024-11-06T18:08:46.395974Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[     0      1      2 ... 999997 999998 999999]\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -385,8 +473,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# Python code\n",
     "def unknown_signature(vector1, vector2):\n",
@@ -403,23 +489,65 @@
     "result"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-06T18:12:41.909212Z",
+     "start_time": "2024-11-06T18:12:41.901844Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
    "source": [
-    "# write your numpy code here and estimate the time of execution"
+    "def unknown_signature(vector1, vector2):\n",
+    "    vector1_np = np.array(vector1)\n",
+    "    vector2_np = np.array(vector2)\n",
+    "    sum_vectors = np.sum(vector1_np * vector2_np)\n",
+    "    return sum_vectors\n",
+    "\n",
+    "%time unknown_signature(vector1, vector2)\n",
+    "print(unknown_signature(vector1, vector2))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:23:01.725683Z",
-     "start_time": "2023-07-03T13:23:01.724185Z"
+     "end_time": "2024-11-06T18:14:09.342496Z",
+     "start_time": "2024-11-06T18:14:09.337900Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n",
+      "32\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -432,8 +560,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
    "source": [
     "# Python code\n",
     "def unknown_signature(matrix1, matrix2):\n",
@@ -446,30 +572,58 @@
     "    return result\n",
     "\n",
     "matrix1 = [[1, 2], [3, 4]]\n",
-    "matrix2 = [[5, 6], [7, 8]]"
+    "matrix2 = [[5, 6], [7, 8]]\n",
+    "\n",
+    "print(unknown_signature(matrix1, matrix2))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:36:06.776877Z",
-     "start_time": "2023-07-03T13:36:06.757338Z"
+     "end_time": "2024-11-06T18:16:07.325307Z",
+     "start_time": "2024-11-06T18:16:07.321707Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 12], [21, 32]]\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [],
    "source": [
-    "# write your numpy code here and estimate the time of execution"
+    "def unknown_signature(matrix1, matrix2):\n",
+    "    matrix1_np = np.array(matrix1)\n",
+    "    matrix2_np = np.array(matrix2)\n",
+    "    multiply_matrix = np.multiply(matrix1_np, matrix2_np)\n",
+    "    return multiply_matrix.tolist()\n",
+    "\n",
+    "matrix1 = [[1, 2], [3, 4]]\n",
+    "matrix2 = [[5, 6], [7, 8]]\n",
+    "print(unknown_signature(matrix1, matrix2))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:36:11.981951Z",
-     "start_time": "2023-07-03T13:36:11.944835Z"
+     "end_time": "2024-11-06T18:16:28.641774Z",
+     "start_time": "2024-11-06T18:16:28.637303Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 12], [21, 32]]\n"
+     ]
+    }
+   ],
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -482,8 +636,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# Python code\n",
     "def unknown_signature(lst):\n",
@@ -493,26 +645,54 @@
     "    result = total / len(lst)\n",
     "    return result\n",
     "\n",
-    "lst = [1, 2, 3, 4, 5]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [],
-   "source": [
-    "# write your numpy code here and estimate the time of execution"
+    "lst = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print(unknown_signature(lst))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T13:39:13.771043Z",
-     "start_time": "2023-07-03T13:39:13.752144Z"
+     "end_time": "2024-11-06T18:17:05.079001Z",
+     "start_time": "2024-11-06T18:17:05.075522Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "lst_np = np.array(lst)\n",
+    "result = np.mean(lst_np)\n",
+    "lst = [1, 2, 3, 4, 5]\n",
+    "print(result)\n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-06T18:18:50.333243Z",
+     "start_time": "2024-11-06T18:18:50.329894Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -570,18 +750,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
    "source": [
-    "# write your numpy code here"
+    "def unknown_signature(lst, mask, new_value):\n",
+    "    lst_np = np.array(lst)\n",
+    "    mask_np = np.array(mask)\n",
+    "    lst_np[mask_np] = new_value\n",
+    "    last_updated = lst_np.tolist()\n",
+    "    return last_updated\n",
+    "\n",
+    "lst = [1, 2, 3, 4, 5]\n",
+    "mask = [True, False, True, False, True]\n",
+    "new_value = 0\n",
+    "unknown_signature(lst, mask, new_value)\n",
+    "lst\n",
+    "\n",
+    "print(unknown_signature(lst, mask, new_value))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T14:09:42.667050Z",
-     "start_time": "2023-07-03T14:09:42.631627Z"
+     "end_time": "2024-11-06T18:22:52.217475Z",
+     "start_time": "2024-11-06T18:22:52.212969Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 0, 4, 0]\n"
+     ]
+    }
+   ],
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -594,8 +795,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [],
    "source": [
     "# Python code\n",
     "def unknown_signature(lst1, lst2):\n",
@@ -612,25 +811,64 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T14:14:16.230395Z",
-     "start_time": "2023-07-03T14:14:16.206501Z"
+     "end_time": "2024-11-06T18:26:08.588484Z",
+     "start_time": "2024-11-06T18:26:08.583283Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-6, -3, -8, -5, -10], [1, 2, 1, 0, 8], [7, 6, 7, 12, 11])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
    "source": [
-    "# write your numpy code here"
+    "def unknown_signature(lst1, lst2):\n",
+    "    lst1_np = np.array(lst1)\n",
+    "    lst2_np = np.array(lst2)\n",
+    "    \n",
+    "    bitwise_complement = ~lst1_np\n",
+    "    bitwise_and = lst1_np & lst2_np\n",
+    "    bitwise_or = lst1_np | lst2_np\n",
+    "    \n",
+    "    return bitwise_complement.tolist(), bitwise_and.tolist(), bitwise_or.tolist()\n",
+    "\n",
+    "list1 = [5, 2, 7, 4, 9]\n",
+    "list2 = [3, 6, 1, 8, 10]\n",
+    "result_bitwise_complement, result_bitwise_and, result_bitwise_or = unknown_signature(list1, list2)\n",
+    "\n",
+    "print(result_bitwise_complement)\n",
+    "print(result_bitwise_and)\n",
+    "print(result_bitwise_or)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T14:14:10.492401Z",
-     "start_time": "2023-07-03T14:14:10.472439Z"
+     "end_time": "2024-11-06T18:26:10.250283Z",
+     "start_time": "2024-11-06T18:26:10.245726Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-6, -3, -8, -5, -10]\n",
+      "[1, 2, 1, 0, 8]\n",
+      "[7, 6, 7, 12, 11]\n"
+     ]
+    }
+   ],
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -643,17 +881,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[3, 13, 11, 21]"
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Python code\n",
     "def unknown_signature(lst):\n",
@@ -671,25 +898,55 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T14:20:27.503470Z",
-     "start_time": "2023-07-03T14:20:27.458680Z"
+     "end_time": "2024-11-06T18:27:13.119221Z",
+     "start_time": "2024-11-06T18:27:13.114303Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 13, 11, 21]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "outputs": [],
    "source": [
-    "# write your numpy code here"
+    "def unknown_signature(lst):\n",
+    "    arr = np.array(lst)\n",
+    "    mask = (arr % 2 == 0) & ((arr % 3 == 0) | (arr > 10))\n",
+    "    modified_arr = (arr[mask] ^ 7) + 2\n",
+    "    return modified_arr.tolist()\n",
+    "\n",
+    "my_list = [6, 9, 12, 14, 17, 20]\n",
+    "result_numpy_style = unknown_signature(my_list)\n",
+    "\n",
+    "print(result_numpy_style)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T14:20:32.863027Z",
-     "start_time": "2023-07-03T14:20:32.805306Z"
+     "end_time": "2024-11-06T18:27:14.915678Z",
+     "start_time": "2024-11-06T18:27:14.910653Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 13, 11, 21]\n"
+     ]
+    }
+   ],
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
